<resources>
    <!-- Global strings -->
    <string name="app_name">Sugarit</string>
    <string name="btn_send">Enviar</string>


    <!-- Login -->

    <string name="entry">Entrar</string>
    <string name="username">email: user@gmail.com</string>
    <string name="user_passowrd">contraseña:</string>
    <string name="registration">Registrame</string>

    <!-- Food -->

    <string name="text_food">¡ Prueba a hacer una foto a tu comida !</string>
    <string name="excalamation">¡</string>
    <string name="close_excalamation">!</string>

    <!-- Recipe -->
    <string name="fridge_txt">¿Qué hay en la nevera?</string>
    <string name="ingredient_txt">Ejemplo: Arroz, Lechuga, Tomate</string>
    <string name="save_recipe_btn">Icono para guardar receta</string>
    <string name="my_recipe">Mis Recetas Guardadas</string>

    <!-- Email Verification -->
    <string name="description_txt">Te enviamos un email de verificación por favor revisa tu bandeja de entrada</string>
    <string name="resend_email">Reenviar</string>
    <string name="email_txt">Revisa tu bandeja de entrada</string>

    <!-- Contexts -->
    <string name="img_food_context">Botón del menú para ir a la pantalla de escaneo de comida</string>
    <string name="img_recipe_context">Botón del menú para ir a la pantalla de recetas por nivel de azúcar y condimentos que tengas en al nevera</string>
    <string name="camera_context">Imagen para encender la cámara del móvil y escanear la comida</string>
    <string name="fridge_context">Imagen nevera</string>
    <string name="marshmallow">Imagen de un malvavisco esperando alégremente</string>
    <string name="marshmallowChef">Imagen Malvavisco</string>
    <string name="backBtn">Botón para ir hacia atrás</string>
    <string name="splash_img">Icono App</string>

    <!-- Item Recipie Save-->
    <string name="erase_btn">Eliminar</string>

    <!-- Instructions Recipie -->
    <string name="image_context">Imagen de la receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="steps">Pasos</string>

    <!--Splash Screen-->
    <string name="splash_screen_title">Sugarit</string>

    <!-- Item camera Result -->
    <string name="title_result_camera">Ingredientes Escaneados</string>

    <!-- Item recipe nutrition -->
    <string name="title_camera_nutrition">Recetas Escaneados</string>

    <!--Activity Result-->
    <string name="btn_user_recipies">Mis Recetas</string>
    <string name="clear_selection">Botón para eliminar los seleccionados</string>
    <string name="selected">Seleccionados: </string>
    <string name="no_response">No se encontraron recetas</string>
    <string name="marsmallow_error">Marsmallow image with xx indicating there is no results</string>

</resources>