<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.splashes.email.EmailVerificationActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/email_txt"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        />

    <ImageView
        android:layout_width="600dp"
        android:layout_height="300dp"
        android:background="@drawable/thinking"
        android:contentDescription="@string/marshmallow"
        />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resend_email_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_btn"
        app:cornerRadius="20dp"
        android:text="@string/resend_email"
        android:textColor="@color/text_color"
        />

</LinearLayout>