<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.recipie.instructions.InstructionsRecipeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/marsmellowImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/marshmallowChef"
        android:src="@drawable/malvavisco_cheef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/containerRecipe"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/background_component"
        app:cardElevation="-8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marsmellowImg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/ingredients"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text="@string/steps"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ingredientsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp" />

        <TextView
            android:id="@+id/stepsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|end"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="40dp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/none"
        android:padding="10dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marsmellowImg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_context"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marsmellowImg" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/none"
        android:contentDescription="@string/backBtn"
        android:src="@drawable/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerRecipe"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>