<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.recipie.RecipieActivity">

    <ImageView
        android:id="@+id/fridge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/fridge_context"
        android:src="@drawable/fridge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <AutoCompleteTextView
        android:id="@+id/textFridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/fridge_txt"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridge"
        app:layout_constraintVertical_bias="0.055" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userIngredients"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFridge"
        app:layout_constraintVertical_bias="0.104">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredient_txt"
            android:inputType="text"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/selectedIngredientsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/userIngredients"
        app:layout_constraintStart_toStartOf="@id/userIngredients"
        app:layout_constraintEnd_toEndOf="@id/userIngredients"
        app:layout_constraintBottom_toTopOf="@id/sendBtn"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/selectedIngredientsText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/clearSelectedBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bg_circle_gray"
            android:src="@drawable/close"
            android:contentDescription="@string/clear_selection"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="center" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_btn"
        android:text="@string/btn_send"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedIngredientsLayout"
        app:layout_constraintVertical_bias="0.129" />

</androidx.constraintlayout.widget.ConstraintLayout>
